--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
             <div class="flex-row justify-space-between">
             <div class="row">
                 <div class="col-12"><h4>5 Day Forecast</h4></div>
-                <div class="col-2">1</div>
-                <div class="col-2">2</div>
-                <div class="col-2">3</div>
-                <div class="col-2">4</div>
-                <div class="col-2">5</div>
+                <div class="col-2" id="day1">1</div>
+                <div class="col-2" id="day2">2</div>
+                <div class="col-2" id="day3">3</div>
+                <div class="col-2" id="day4">4</div>
+                <div class="col-2" id="day5">5</div>
             </div>
         </div>
 
