--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js"></script>
     <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Weather Dashboard</title>
 </head>
@@ -39,22 +40,24 @@
         </div>
             <div class="col-8">
                 <div class="card">
-                <h1 class="subtitle"><span id="city-input"></span></h1>
+                <h1 class="subtitle"><span id= "city-input"></span></h1>
                 <div id="weather-container" class="list-group">
-                    <h5 id="city-temp"></h5>
-                    <h5 id="windspeed"></h5>
-                    <h5 id="humidity"></h5>
-                    <h5 id="uv-index"></h5>
+                    <h5 id="date"></h5>
+                    <h5>Temp: <span id="city-temp"></span></h5>
+                    <h5>Wind: <span id="windspeed"></span></h5>
+                    <h5>Humidity: <span id="humidity"></span></h5>
+                    <h5>UV Index: <span id="uv-index"></span></h5>
                 </div>
             </div>
             <div class="flex-row justify-space-between">
             <div class="row">
                 <div class="col-12"><h4>5 Day Forecast</h4></div>
-                <div class="col-2" id="day1">1</div>
-                <div class="col-2" id="day2">2</div>
-                <div class="col-2" id="day3">3</div>
-                <div class="col-2" id="day4">4</div>
-                <div class="col-2" id="day5">5</div>
+                <div id = "daily"></div>
+                <div class="col-2" id="day1"></div>
+                <div class="col-2" id="day2"></div>
+                <div class="col-2" id="day3"></div>
+                <div class="col-2" id="day4"></div>
+                <div class="col-2" id="day5"></div>
             </div>
         </div>
 
