got icon on today's forecast -- need to figure out local storage better and then create buttons for search history

--- a/index.html
+++ b/index.html
@@ -38,11 +38,14 @@
 
             </div>
         </div>
-            <div class="col-8">
-                <div class="card">
-                <h1 class="subtitle"><span id= "city-input"></span></h1>
+            <div class="row col-8">
+                <div class="col-8">
+                <h1 class="subtitle" id= "city-input"></h1>
+                <h5 id="date"></h5>
+                <img id ="icon-img">
                 <div id="weather-container" class="list-group">
-                    <h5 id="date"></h5>
+                    
+                    
                     <h5>Temp: <span id="city-temp"></span></h5>
                     <h5>Wind: <span id="windspeed"></span></h5>
                     <h5>Humidity: <span id="humidity"></span></h5>
