still need to get search history buttons to populate immediately

--- a/index.html
+++ b/index.html
@@ -35,18 +35,16 @@
                         </div>
                         <br>
                         <button type="submit" id="search-btn" class="btn-primary btn-block">Search</button>
-                        <button id="clear-btn" class="btn-primary btn-block">Clear</button>
-
+                        <button id="clear-btn" class="btn-primary btn-block">Clear History</button>
                     </form>
                 </div>
 
                 <div class="list-group"><br>
-                    <p id="search-history">Search history</p>
-
+                    <p id="search-history"></p>
                 </div>
             </div>
             <div class="row col-8">
-                <div class="col-8">
+                <div class="col-10">
                     <h1 class="subtitle" id="city-input"></h1>
                     <h5 id="date"></h5>
                     <img id="icon-img">
@@ -59,17 +57,53 @@
                         <h5>UV Index: <span id="uv-index"></span></h5>
                     </div>
                 </div>
-                <div class="flex-row justify-space-between">
+                <div class="col-12 flex-row justify-space-between">
                     <div class="row">
                         <div class="col-12">
                             <h4>5 Day Forecast</h4>
                         </div>
                         <div id="daily"></div>
-                        <div class="col-2" id="day1"></div>
-                        <div class="col-2" id="day2"></div>
-                        <div class="col-2" id="day3"></div>
-                        <div class="col-2" id="day4"></div>
-                        <div class="col-2" id="day5"></div>
+                        <div class="col-2" id="day1">
+                            <p></p>
+                            <p id="datedd1"></p>
+                            <img id="img1">
+                            <p id="t1"></p>
+                            <p id="w1"></p>
+                            <p id="h1"></p>
+                        </div>
+                        <div class="col-2" id="day2">
+                            <p></p>
+                            <p id="datedd2"></p>
+                            <img id="img2">
+                            <p id="t2"></p>
+                            <p id="w2"></p>
+                            <p id="h2"></p>
+                        
+                        </div>
+                        <div class="col-2" id="day3">
+                            <p></p>
+                            <p id="datedd3"></p>
+                            <img id="img3">
+                            <p id="t3"></p>
+                            <p id="w3"></p>
+                            <p id="h3"></p>
+                        </div>
+                        <div class="col-2" id="day4">
+                            <p></p>
+                            <p id="datedd4"></p>
+                            <img id="img4">
+                            <p id="t4"></p>
+                            <p id="w4"></p>
+                            <p id="h4"></p>
+                        </div>
+                        <div class="col-2" id="day5">
+                            <p></p>
+                            <p id="datedd5"></p>
+                            <img id="img5">
+                            <p id="t5"></p>
+                            <p id="w5"></p>
+                            <p id="h5"></p>
+                        </div>
                     </div>
                 </div>
 
