--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         <div class="search-field">
                             <button type="clear" id="x-btn">x</button>
                             <input name="city-search" id="city-name" class="form-control" type="text"
-                                placeholder="Belgrade">
+                                placeholder="Miami">
                         </div>
                         <br>
                         <button type="submit" id="search-btn" class="btn-primary btn-block">Search</button>
